# LinuxAppDev2021

./: README.md
02_TerminalProject/: Makefile  Show  Show.c
03_Multifile/: Makefile  fun.c  outlib.h  prog.c
04_Text/: randomize.sh  test
05_Debugging/: Makefile  range.c  script_1  script_2
06_TracingFencing/: Makefile  move.c  safe.c  tests
07_Environmental/: Makefile.am  configure.ac  rhasher.c  tests.sh
08_Regexps/: Makefile.am  configure.ac  esub.c  tests.sh
09_Testing/: Makefile.am  configure.ac
09_Testing/src/: Makefile.am  buf.c  buf.h  libbuf.c
09_Testing/tests/: Makefile.am  test1.ts  test2.ts  test3.ts  test4.ts  test5.ts
10_I18n/: Makefile.am  configure.ac
10_I18n/po/: Makefile.am  founder.pot  messages.pot  ru.po
10_I18n/src/: Makefile.am  founder.c
